--- a/assets/css/ce-style.css
+++ b/assets/css/ce-style.css
@@ -19,7 +19,6 @@ body {
     padding: 0;
     background: #f5f5f5;
     min-height: 100vh;
-    font-size: 0.8em;
     line-height: 1.75em;
     font-weight: 400;
     /*color: #666;*/
@@ -28,12 +27,7 @@ body {
 	max-height: 200px;
 	margin-top: -10px;
 }
-section.intro {
-	min-height: 80vh;
-	background:
-		linear-gradient(rgba(31, 33, 51, 0.4), rgba(11, 13, 35, 0.4)),
-		url('../imgs/bg-1.jpg') center/cover fixed no-repeat;
-}
+
 section.intro .intro-text{
 	border-left: 2px solid #fff
 	
@@ -69,6 +63,8 @@ div.intro-text {
 .nav-link {
 	text-transform: uppercase;
 	font-size: 0.9em;
+	border-bottom: 2px solid #343A40;
+
 }
 .nav-link:hover {
 	border-bottom: 2px solid #FF450C;
@@ -109,6 +105,8 @@ section.intro footer{
 }  
 .white-service-box,.orange-service-box {
 	cursor: pointer;
+	border-bottom: 2px solid #fff;
+
 }
 .white-service-box:hover {
 	border-bottom: 2px solid #FF450C;
@@ -120,6 +118,9 @@ section.intro footer{
 
 }
 .book-room-li:hover {
+	color: #fff !important;
+	font-weight: bolder
+	opacity:1;
 	border-bottom: transparent;
 }
 .orange-service-box:hover {
