--- a/assets/css/ce-extra-responsive.css
+++ b/assets/css/ce-extra-responsive.css
@@ -39,7 +39,7 @@
 	background-color: #fff;
 }
 .paper-box-shadow {
-	box-shadow: 0 6px 10px -4px rgba(0,0,0,.15);
+	box-shadow: 0 6px 10px -4px rgba(0, 0, 0, 0.28);
 }
 .orange {
 	background-color: #FF9800;
